        binmode for binary streams, and removing misleading "use bytes".
        * xs/GdkPixbufLoader.xs: the right way to access scalars is *not*
        SvPVX, but SvPV. Also removed "count" from ->write, since strings
        in perl are always counted and exposing this c-ism gives no benefit.
        * Makefile.PL: change the glib-not-found error message to the perl
        standard.

2003/06/20 11:33 muppetman

	* Gtk2.pm, README: bump version for 0.24 release

	* Makefile.PL: just seeing if Glib is available isn't enough, make
	sure it's recent enough, too.  oh, and bump the required glib 
	version while we're at it

2003/06/19 13:46 joered
	* xs/GdkColor.xs: added accessors for GdkColor struct members.

2003/06/19 00:58 pcg

	* Makefile.PL: write a fake Makefile using PREREQ when important
        modules are missing, this ensures auto-installation within CPAN.

2003/06/18 10:48 muppetman

	* Gtk2.pm: catch undefined values to hush warnings

	* xs/GtkMenu.xs, xs/GtkItemFactory.xs: change stack handling to
	avoid attempting to free undef.

2003/06/17 18:21 muppetman

	* gtk2perl.h, xs/GtkObject.xs: push sink functions into Glib, 
	to avoid some problems in which GtkObject created via 
	Glib::Object->new don't have gtk_object_sink called on them.

2003/06/16 22:25 muppetman

	* xs/GdkColor.xs, gtk-demo/drawingarea.pl: not sure how the GBoxed
	change could excite this, but suddenly gdk_color_free is very unhappy
	with the GdkColors created by Gtk2::Gdk::Color->new and ->parse.
	fixed by using gdk_color_copy instead of g_new.  freaky.

2003/06/16 22:21 pcg

        * xs/GtkAdjustment.xs: two minor typoes, found while porting
        gimp-perl to 1.3. Reply to muppetman becomes urgent slowly.

2003/06/16 22:36 joered

	* xs/Gtk2/GtkTextIter.xs: fixed a memory leak. Thanks to
	  muppet for the hint.

2003/06/16 14:31 muppetman

	* xs/GtkStyle.xs, AUTHORS: patch from Tom Hargreaves (hex at freezone 
	dot co dot uk> makes font_desc work correctly.
