@@ -7,6 +7,8 @@
         in perl are always counted and exposing this c-ism gives no benefit.
         * Makefile.PL: change the glib-not-found error message to the perl
         standard.
+        * xs/GdkWindow.xs: enabled various non-deprecated methods I needed
+        but weren't implemented yet, plus some rarely used ones.
 
 2003/06/20 11:33 muppetman
 
